<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.shoe.ShoeDetailFragment">

        <TextView
            android:id="@+id/name_textView"
            style="@style/s_text_title_style"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/name_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/s_edit_text_style"
            android:autofillHints=""
            android:hint="@string/name"

            android:labelFor="@id/name_textView"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/name_textView"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/size_text_view"
            style="@style/s_text_title_style"
            android:text="@string/size"
            android:textStyle="bold"

            app:layout_constraintEnd_toStartOf="@+id/size_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_textView" />

        <EditText
            android:id="@+id/size_edit_text"
            style="@style/s_edit_text_style"
            android:hint="@string/size"

            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_textView"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/company_textview"
            style="@style/s_text_title_style"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/company_edit_text"

            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/company_edit_text"
            style="@style/s_edit_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:labelFor="@id/company_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/company_textview"
            app:layout_constraintTop_toBottomOf="@+id/size_edit_text" />

        <TextView
            android:id="@+id/Description_textview"
            style="@style/s_text_title_style"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_textview" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/wide_margin"
            android:layout_marginTop="@dimen/wide_margin"
            android:layout_marginEnd="@dimen/wide_margin"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Description_textview" />


        <Button
            android:id="@+id/cancel_button"
            style="@style/button_style"
            android:layout_marginStart="@dimen/wide_margin"
            android:backgroundTint="@color/_light_green"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

        <Button
            android:id="@+id/save_button"
            style="@style/button_style"
            android:layout_marginEnd="@dimen/wide_margin"
            android:text="@string/save"
            android:paddingHorizontal="30dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>